--- a/Chatter.Core/Chatter.Core.csproj
+++ b/Chatter.Core/Chatter.Core.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Server\Messaging\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Config" Version="4.5.11" />
+  </ItemGroup>
+
 </Project>
