--- a/Chatter.Core/Chatter.Core.csproj
+++ b/Chatter.Core/Chatter.Core.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="NLog.Config" Version="4.5.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chatter.Common\Chatter.Common.csproj" />
+  </ItemGroup>
+
 </Project>
