--- a/Chatter.App/Chatter.App.csproj
+++ b/Chatter.App/Chatter.App.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chatter.Core\Chatter.Core.csproj" />
+  </ItemGroup>
+
 </Project>
