--- a/Chatter.Server/Chatter.Server.csproj
+++ b/Chatter.Server/Chatter.Server.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="NLog.Config" Version="4.5.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Chatter.Core\Chatter.Core.csproj" />
+  </ItemGroup>
+
 </Project>
